# rust-entro-sort

./: Cargo.toml  README.md
examples/: test_entro_shift.rs
src/: entro_sort.rs  lib.rs
