[package]
authors = ["Will Parsons <https://www.linkedin.com/in/twexxor/>"]
categories = ["algorithms", "embedded", "game-development", "no-std"]
description = "Entro Sort is an in-place, linearithmic, unstable sorting algorithm."
documentation = "https://github.com/twexxor/rust-entro-sort/README.md"
homepage = "https://entrocraft.com/dungeon/sorting-algorithms/entro-sort/"
keywords = ["ascending", "descending", "generic", "n-log-n", "sort-order"]
license = "MIT"
name = "entro-sort"
repository = "https://github.com/twexxor/rust-entro-sort"
version = "1.0.0"
